# BatNet

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: receiver-calibration.c  signal-processing.c
app/src/main/java/org/batnet/: App.kt  Extensions.kt  MagicNumbers.kt  MainActivity.kt
app/src/main/java/org/batnet/calib/: ReceiverCalibration.kt  SenderCalibration.kt
app/src/main/java/org/batnet/db/: AppDatabase.kt  Dialog.kt  DialogMembershipEntity.kt  DialogsDao.kt  Message.kt  MessageToForward.kt  MessagesDao.kt  TypeConverters.kt  User.kt  UserIdHolder.kt  UsersDao.kt
app/src/main/java/org/batnet/ecc/: CRCPolynomials.kt  ErrorCorrectingCode.kt
app/src/main/java/org/batnet/receiver/: PhaseShiftKeyingReceiver.kt  PhaseShiftKeyingSignalProcessor.kt  UltrasoundMessage.kt
app/src/main/java/org/batnet/services/: ChannelLock.kt  ServiceConnectionWithMessenger.kt  SignalProcessingService.kt
app/src/main/java/org/batnet/transmitter/: PhaseShiftKeyingSignalGenerator.kt  PhaseShiftKeyingTransmitter.kt
app/src/main/java/org/batnet/ui/: DialogsActivity.kt  MessagingActivity.kt  SignalProcessingActiveNotification.kt
app/src/main/java/org/batnet/utils/: BitList.kt  BufferProducerConsumer.kt  Complex.kt  LazyWhenOnUIThread.kt  OffsetArray.kt  ReceiverEvent.kt  SymbolList.kt
app/src/main/res/layout/: activity_dialogs.xml  activity_main.xml  activity_messaging.xml
app/src/main/res/menu/: menu_dialogs.xml  menu_scrolling.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/android/os/: Build.java
app/src/test/java/android/util/: Log.java
app/src/test/java/org/batnet/: CalibrationTest.kt  EccTest.kt  ExampleUnitTest.kt  MagicNumbersAssertions.kt  PSKDataTest.kt  TestUsingNativeLibraries.kt
app/src/test/java/org/batnet/ecc/: MockEcc.kt
app/src/test/java/org/batnet/eval/: Phys.kt
gradle/wrapper/: gradle-wrapper.properties
